--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Lever Postings Embed Concept</title>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <title>Lever Postings Embed Test</title>
 
-
-      <link rel="stylesheet" href="css/style.css">
 
 
 </head>
@@ -15,18 +11,8 @@
 <body>
   <div class="wrapper">
   <div class="content">
-    <div class="inner">
-      <img src="http://cdn2.hubspot.net/hubfs/463671/Lever_logo_normal2x-1.png">
-      <h1>Get embed code for Lever jobs</h1>
-      <p>This code lets you easily add a list of your company's jobs from your Lever account to your website. Also works well for content management systems (CMS) like Wordpress and Hubspot. <a href="https://youtu.be/ZzsM2HIbY-A" target="_blank">See demo</a>.</p>
 
-      <div class="input-box">
-        <input id="account" placeholder="Enter your account name">
-        <button>Create code</button>
-      </div>
-      <p class="subtext">(Your account name is usually your company name – you can find it <a href="https://andreasmb.github.io/lever-jobs-embed/img/account-name-help.png">here</a>.)</p>
-      <div id="code"></div>
-    </div>
+    <div id='lever-jobs-container'></div><script type='text/javascript'>window.leverJobsOptions = {accountName: 'dnc', includeCss: true};</script><script type='text/javascript' src='index.js'></script>
   </div>
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
