--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="wrapper">
   <div class="content">
 
-    <div id='lever-jobs-container'></div><script type='text/javascript'>window.leverJobsOptions = {accountName: 'dnc', includeCss: true};</script><script type='text/javascript' src='index.js'></script>
+    <div id='lever-jobs-container'></div><script type='text/javascript'>window.leverJobsOptions = {accountName: 'barefootproximity', includeCss: true};</script><script type='text/javascript' src='index.js'></script>
   </div>
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
